# lpthw

./: .gitignore  LPTHW.ipynb  ex13.py  ex26.py  ex26_code.py  ex43.py  ex44.py  ex46.py  ex47.py  ex47_dialogue.py  ex48.py  ex51.py  ex53.py  pyproject.toml  sample.txt
tests/: ex_48_test.py
