[tool.poetry]
name = "lpthw"
version = "0.1.0"
description = ""
authors = ["p-kamath <pavithra.kamath@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
