[tool.poetry]
name = "lpthw"
version = "0.1.0"
description = ""
authors = ["p-kamath <pavithra.kamath@thoughtworks.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
